--- a/package.json
+++ b/package.json
@@ -20,5 +20,11 @@
   "bugs": {
     "url": "https://github.com/guaracyalima/js-tdd-course/issues"
   },
-  "homepage": "https://github.com/guaracyalima/js-tdd-course#readme"
+  "homepage": "https://github.com/guaracyalima/js-tdd-course#readme",
+  "devDependencies": {
+    "eslint": "^4.18.2",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.9.0",
+    "husk": "^0.5.3"
+  }
 }
